--- a/HTMLInstagram/css/styles.css
+++ b/HTMLInstagram/css/styles.css
@@ -1,61 +1,76 @@
 body {
-    background: #eee;
-    text-align: center;
-    padding: 0 25px;
+  background: #eee;
+  text-align: center;
+  padding: 0 25px;
 }
 form {
-    /*padding-left: 100px;*/
+  /*padding-left: 100px;*/
 }
-
-#main {
-    width: 500px;
-    margin: auto;
-    text-align: left;
-    background: white;
-    padding: 50px 60px;
-    border: solid #ddd;
-    border-width: 0 1px 1px 1px;
+img {
+  width: 100%;
+  height: auto;
+  align-items: center;
+  align-self: center;
+  margin: 0 auto;
+}
+#clickable {
+  /*background-color: rgb(92, 227, 93);*/
+  width: 200px;
+  height: 25px;
+  display: block;
+  align-items: center;
+  align-self: center;
+  border:1px solid black;
+  margin: 0 auto;
+}
+#fileupload {
+  /*background-color: rgb(92, 227, 93);*/
+  width: auto;
+  height: auto;
+  display: block;
+  align-items: center;
+  align-self: center;
+  /*border:1px solid black;*/
+  margin: 0 auto;
+/*#main {
+  width: 500px;
+  margin: auto;
+  text-align: left;
+  background: white;
+  padding: 50px 60px;
+  border: solid #ddd;
+  border-width: 0 1px 1px 1px;
 }
 
 #main h1 {
-    margin-top: 0;
-    font-size: 35px;
+  margin-top: 0;
+  font-size: 35px;
 }
 
 #main ul {
-    padding-left: 20px;
+  padding-left: 20px;
 }
 
 #main .error {
-    border: 1px solid red;
-    background: #FDEFF0;
-    padding: 20px;
+  border: 1px solid red;
+  background: #FDEFF0;
+  padding: 20px;
 }
 
 #main .success {
-    margin-top: 25px;
+  margin-top: 25px;
 }
 
 #main .success code {
-    font-size: 12px;
-    color: green;
-    line-height: 13px;
+  font-size: 12px;
+  color: green;
+  line-height: 13px;
 }
 
-#clickable {
-    /*background-color: rgb(92, 227, 93);*/
-    width: 200px;
-    height: 25px;
-    display: block;
-    align-items: center;
-    align-self: center;
-    border:1px solid black;
-    margin: 0 auto;
-
-    }
+}
 a.fill-div {
-    display: block;
-    height: 100%;
-    width: 100%;
-    text-decoration: none;
-}
+  display: block;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+}*/
