--- a/HTMLInstagram/css/styles.css
+++ b/HTMLInstagram/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background: #eee;
+  background: #fff;
   text-align: center;
   padding: 0 25px;
 }
@@ -12,6 +12,10 @@ img {
   align-items: center;
   align-self: center;
   margin: 0 auto;
+}
+#logo {
+  width: 60%;
+  padding-top: 20px;
 }
 #clickable {
   /*background-color: rgb(92, 227, 93);*/
